# steelpatcher

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  generate-version.sh  generate_version.ps1  pyproject.toml  setup.py
.github/workflows/: release.yml
cmake/: arm-none-eabi-gcc.cmake
ggpatcher/: __init__.py  __main__.py  asar.py  cli.py  descriptor.py  patcher.py
patches/gg_wine/: manifest.json  wine-11.13-crypt32.patch  wine-11.13-hid-short-input.patch
patches/recorded_macro/: CMakeLists.txt  README.md  extension.ld  manifest.json
patches/recorded_macro/gg/: manifest.json  rival-3-wireless-v2.scm.patch
patches/recorded_macro/include/: macro_engine.h  patch_abi.h  patch_runtime.h  target_config.h
patches/recorded_macro/src/: entry.S  fallback_flash.c  firmware_hooks.c  macro_engine.c  patch_runtime.c  single_slot_loader.c
patches/recorded_macro/targets/: rival3_wireless_gen2.json
profiles/: rival3_wireless_gen2.json
steelpatcher/: __init__.py  __main__.py  cli.py  elf.py  firmware.py  matcher.py  patcher.py  profile.py
steelupdater/: CMakeLists.txt  catalog.cpp  catalog.h  container.cpp  container.h  device.cpp  device.h  main.cpp  updater.cpp  updater.h
