[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "steelpatcher"
dynamic = ["version"]
description = "Profile-driven SteelSeries firmware patcher"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cryptography>=49,<50", "pyelftools>=0.32,<1"]

[project.optional-dependencies]
build = ["pyinstaller>=6.12,<7"]

[project.scripts]
ggpatcher = "ggpatcher.cli:main"
steelpatcher = "steelpatcher.cli:main"

[tool.setuptools.packages.find]
include = ["ggpatcher*", "steelpatcher*"]

[tool.black]
line-length = 88
